automatically backed up by learn

--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,16 +1,4 @@
 /* write your override styles here */
-#wall .tag-1 {
-  display: none;
-}
-#wall .tag-2 {
-  display: none;
-}
-#wall .tag-3 {
-  display: none;
-}
-#wall .tag-4 {
-  display: none;
-}
-#wall .tag-5 {
+#wall .tag-1, .tag-2, {
   display: none;
 }
