--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,4 +1,16 @@
 /* write your override styles here */
-#wall .tag-1, .tag-2, {
+#wall .tag-1,  {
+  display: none;
+}
+#wall .tag-2 {
+  display: none;
+}
+#wall .tag-3 {
+  display: none;
+}
+#wall .tag-4 {
+  display: none;
+}
+#wall .tag-5 {
   display: none;
 }
