--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -2,4 +2,8 @@
 #wall .tag-1  {
   display: none;
 }
-
+#wall #tag-2 {
+  background: url(../images/tag-2.png) no-repeat;
+  z-index: 6;
+  display: none;
+}
