automatically backed up by learn

--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -7,3 +7,7 @@
   z-index: 6;
   display: none;
 }
+div#wall #tag-3.slick {
+  background: url(../images/tag-3.png) no-repeat;
+  z-index: 5;
+  display: none;
